# C_script_runner

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
includes/: inputs_manager.hpp  metadata_types.hpp  output_manager.hpp  random_input_generator.hpp  runner.hpp
includes/data_model/: component.hpp  metadata_types.hpp  model_input.hpp  model_output.hpp  model_parameter.hpp  model_state.hpp  modules_cache.hpp  multi_component_system.hpp  system.hpp  system_metadata.hpp
includes/execution/: component_runner.hpp  interconnect_manger.hpp  runner.hpp  runner_target.hpp  system_runner.hpp
includes/sciplot/: Plot2D.hpp
includes/utils/: builder.hpp  csv_interface.hpp  settings_store.hpp
models/bus_model/: bus_model.cpp  bus_model.hpp  bus_model.json  plecs_inputs.csv  ref_outputs.csv
models/bus_model_cross/: bus_model_cross.cpp  bus_model_cross.hpp  bus_model_cross.json  bus_model_cross_sink.json  bus_model_cross_source.json  inputs.csv  outputs.csv  reference_model.plecs
models/bus_model_hv/: bus_model_hv.cpp  bus_model_hv.hpp  bus_model_hv.json
models/bus_model_lv/: bus_model_mv.cpp  bus_model_mv.hpp  bus_model_mv.json
models/bus_model_mv/: bus_model_lv.cpp  bus_model_lv.hpp  bus_model_lv.json
models/cc_dab/: cc_dab.cpp  cc_dab.hpp  cc_dab.json  cc_inputs.csv  cc_reference_out.csv  plecs_data.csv
models/dab_series/: dab_series.json  dab_series_simple.json  data_analysis.ipynb  lv_dab.json  results.csv  system.drawio
models/mea_grid/: mea_grid.json
models/sd_dab/: plecs_data.csv  reference_out.csv  sd_dab.cpp  sd_dab.hpp  sd_dab.json
models/test_models/: SeriesTest.json  SeriesWithInputsTest.json  accumulator.cpp  accumulator.hpp  accumulator.json  multiplyByConstant.json
models/test_models/accumulator/: accumulator.cpp  accumulator.hpp  accumulator.json
models/test_models/multiply_by_constant/: multiplyByConstant.cpp  multiplyByConstant.hpp  multiplyByConstant.json
models/test_models/multiply_by_variable/: multiplyByVariable.cpp  multiplyByVariable.hpp  multiplyByVariable.json  multiply_by_v.csv
src/: inputs_manager.cpp  main.cpp  output_manager.cpp  random_input_generator.cpp  runner.cpp
src/data_model/: component.cpp  model_input.cpp  model_output.cpp  model_parameter.cpp  model_state.cpp  modules_cache.cpp  multi_component_system.cpp  system.cpp
src/execution/: component_runner.cpp  interconnect_manger.cpp  runner.cpp  system_runner.cpp
src/utils/: builder.cpp  csv_interface.cpp  settings_store.cpp
test/: plecs_data.csv  sd_dab.json
